[gd_scene load_steps=77 format=2]

[ext_resource path="res://GDScript/TrajectoryMesh.gd" type="Script" id=1]
[ext_resource path="res://GDScript/ObstacleSegmentationMesh.gd" type="Script" id=2]
[ext_resource path="res://GDScript/PointCloudMapMesh.gd" type="Script" id=3]
[ext_resource path="res://GDScript/RoadMarkerMesh.gd" type="Script" id=4]
[ext_resource path="res://GDScript/RoadSurfaceMesh.gd" type="Script" id=5]
[ext_resource path="res://GDScript/Main.gd" type="Script" id=6]
[ext_resource path="res://GDScript/EgoVehicle.gd" type="Script" id=7]
[ext_resource path="res://Vehicle/RX450h/RX450h.fbx" type="PackedScene" id=8]
[ext_resource path="res://GDScript/Camera.gd" type="Script" id=9]
[ext_resource path="res://GDScript/robobus/Brake.gd" type="Script" id=10]
[ext_resource path="res://icon/traffic_light.png" type="Texture" id=11]
[ext_resource path="res://GDScript/TrafficLightMesh.gd" type="Script" id=12]
[ext_resource path="res://fonts/SourceCodePro-Light.otf" type="DynamicFontData" id=13]
[ext_resource path="res://Vehicle/HeadBeamLight.gd" type="Script" id=14]
[ext_resource path="res://GDScript/Steering.gd" type="Script" id=15]
[ext_resource path="res://icon/console_meter_hand.png" type="Texture" id=16]
[ext_resource path="res://icon/robobus-39.png" type="Texture" id=17]
[ext_resource path="res://GDScript/DynamicObjectMesh.gd" type="Script" id=18]
[ext_resource path="res://icon/Red.png" type="Texture" id=19]
[ext_resource path="res://icon/green.png" type="Texture" id=20]
[ext_resource path="res://icon/yellow.png" type="Texture" id=21]
[ext_resource path="res://GDScript/VectorMap.gd" type="Script" id=22]
[ext_resource path="res://GDScript/Red.gd" type="Script" id=23]
[ext_resource path="res://icon/steering.png" type="Texture" id=24]
[ext_resource path="res://icon/console_meter.png" type="Texture" id=25]
[ext_resource path="res://GDScript/ConsoleMeter.gd" type="Script" id=26]
[ext_resource path="res://GDScript/Menu.gd" type="Script" id=27]
[ext_resource path="res://GDScript/TrafficLight.gd" type="Script" id=28]
[ext_resource path="res://robobus_ui/left64.png" type="Texture" id=29]
[ext_resource path="res://GDScript/PathMesh.gd" type="Script" id=30]
[ext_resource path="res://GDScript/TrafficLightRecognitionMesh.gd" type="Script" id=31]
[ext_resource path="res://robobus_ui/right64.png" type="Texture" id=32]
[ext_resource path="res://GDScript/Yellow.gd" type="Script" id=33]
[ext_resource path="res://GDScript/Green.gd" type="Script" id=34]
[ext_resource path="res://robobus_ui/manual.png" type="Texture" id=35]
[ext_resource path="res://robobus_ui/auto0.png" type="Texture" id=36]
[ext_resource path="res://GDScript/robobus/Right_Turn_Signal.gd" type="Script" id=37]
[ext_resource path="res://GDScript/robobus/Left_Turn_Signal.gd" type="Script" id=38]
[ext_resource path="res://GDScript/robobus/Mode_Report.gd" type="Script" id=39]
[ext_resource path="res://robobus_ui/rectangle-horizontal.png" type="Texture" id=40]
[ext_resource path="res://robobus_ui/gear.png" type="Texture" id=41]
[ext_resource path="res://robobus_ui/brake.png" type="Texture" id=42]
[ext_resource path="res://robobus_ui/speedometer.png" type="Texture" id=43]
[ext_resource path="res://robobus_ui/battery.png" type="Texture" id=44]
[ext_resource path="res://GDScript/robobus/Speedometer.gd" type="Script" id=45]
[ext_resource path="res://GDScript/robobus/Gear.gd" type="Script" id=46]
[ext_resource path="res://GDScript/robobus/Battery.gd" type="Script" id=47]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.40455, 0.804875, 1.07238 )

[sub_resource type="ProceduralSky" id=28]
resource_name = "sky"
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0, 0.32549, 0.580392, 1 )
sky_curve = 0.245887
ground_bottom_color = Color( 0.145098, 0.145098, 0.145098, 1 )
ground_horizon_color = Color( 0, 0.138012, 0.246094, 1 )
ground_curve = 0.0627669

[sub_resource type="Environment" id=21]
resource_name = "background"
background_mode = 2
background_sky = SubResource( 28 )
fog_color = Color( 0.501961, 0.6, 0.701961, 0.6 )
fog_depth_enabled = false
fog_depth_end = 1609.4

[sub_resource type="SpatialMaterial" id=12]
render_priority = -2
flags_transparent = true
flags_use_point_size = true
params_blend_mode = 1
albedo_color = Color( 0.329412, 0.254902, 0.596078, 1 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 200.0

[sub_resource type="ArrayMesh" id=4]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
flags_use_point_size = true
params_point_size = 2.0
albedo_color = Color( 0.964706, 1, 0, 0.219608 )

[sub_resource type="ArrayMesh" id=10]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=17]
render_priority = -3
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[sub_resource type="ArrayMesh" id=16]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=19]
render_priority = -2
flags_transparent = true
vertex_color_use_as_albedo = true
distance_fade_mode = 1
distance_fade_min_distance = 200.0
distance_fade_max_distance = 0.0

[sub_resource type="ArrayMesh" id=18]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=30]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=29]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=34]
render_priority = -1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=35]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=24]
render_priority = -1
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 1, 1, 0.823529 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 60.0

[sub_resource type="ArrayMesh" id=23]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=26]
render_priority = 1
flags_transparent = true
albedo_color = Color( 0, 0.909804, 1, 0.623529 )

[sub_resource type="ArrayMesh" id=27]
resource_name = "mesh"

[sub_resource type="SpatialMaterial" id=32]
render_priority = 1
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="ArrayMesh" id=31]
resource_name = "mesh"

[sub_resource type="DynamicFont" id=54]
size = 15
outline_size = 1
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=55]
size = 80
outline_size = 3
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=49]
size = 155
outline_size = 3
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=53]
size = 300
outline_size = 7
font_data = ExtResource( 13 )

[sub_resource type="DynamicFontData" id=48]

[sub_resource type="DynamicFont" id=43]
size = 500
outline_size = 20
font_data = ExtResource( 13 )
fallback/0 = SubResource( 48 )

[sub_resource type="DynamicFont" id=50]
size = 300
outline_size = 6
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=33]
size = 80
use_filter = true
font_data = ExtResource( 13 )

[node name="Main" type="Spatial"]
script = ExtResource( 6 )

[node name="EgoVehicle" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="EgoVehicleKinematicBody" type="KinematicBody" parent="EgoVehicle"]

[node name="HeadBeamLight" type="SpotLight" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.79841, 0.861473, 0 )
light_energy = 2.0
spot_range = 81.425
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="EgoVehicle/EgoVehicleKinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.44026, 0.82268, 0 )
shape = SubResource( 1 )

[node name="VehicleBody" parent="EgoVehicle/EgoVehicleKinematicBody" instance=ExtResource( 8 )]
transform = Transform( 0.999583, -0.0288986, 0, 0.0288986, 0.999582, 0, 0, 0, 1, 0, 0, -0.065 )

[node name="Camera" type="Spatial" parent="EgoVehicle"]
script = ExtResource( 9 )

[node name="Horizon" type="Spatial" parent="EgoVehicle/Camera"]

[node name="Vertical" type="Spatial" parent="EgoVehicle/Camera/Horizon"]

[node name="ViewCamera" type="Camera" parent="EgoVehicle/Camera/Horizon/Vertical"]
transform = Transform( -4.37114e-08, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, 1.49502e-08, -4.10753e-08, -8, 4, 0 )
environment = SubResource( 21 )
size = 90.53
far = 300.0

[node name="PointCloudMapMesh" type="MeshInstance" parent="."]
material_override = SubResource( 12 )
mesh = SubResource( 4 )
script = ExtResource( 3 )

[node name="ObstacleSegmentationMesh" type="MeshInstance" parent="."]
material_override = SubResource( 13 )
mesh = SubResource( 10 )
skeleton = NodePath("../EgoVehicle")
script = ExtResource( 2 )

[node name="VectorMap" type="Spatial" parent="."]
script = ExtResource( 22 )

[node name="RoadSurfaceMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 17 )
mesh = SubResource( 16 )
skeleton = NodePath("../..")
script = ExtResource( 5 )

[node name="RoadMarkerMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 19 )
mesh = SubResource( 18 )
skeleton = NodePath("../RoadSurfaceMesh")
script = ExtResource( 4 )

[node name="TrafficLightMesh" type="MeshInstance" parent="VectorMap"]
material_override = SubResource( 30 )
mesh = SubResource( 29 )
script = ExtResource( 12 )

[node name="PathDrivableAreaMesh" type="MeshInstance" parent="."]
material_override = SubResource( 34 )
mesh = SubResource( 35 )
script = ExtResource( 30 )

[node name="TrajectoryMesh" type="MeshInstance" parent="."]
material_override = SubResource( 24 )
mesh = SubResource( 23 )
script = ExtResource( 1 )

[node name="DynamicObjectMesh" type="MeshInstance" parent="."]
material_override = SubResource( 26 )
mesh = SubResource( 27 )
script = ExtResource( 18 )

[node name="TrafficLightRecognitionMesh" type="MeshInstance" parent="."]
material_override = SubResource( 32 )
mesh = SubResource( 31 )
skeleton = NodePath("../VectorMap")
script = ExtResource( 31 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.866026, 0.5, 0, -0.5, -0.866026, 0, 1.77694, 0 )
light_specular = 0.0

[node name="Menu" type="Control" parent="."]
script = ExtResource( 27 )

[node name="PointCloudMapMeshCheckButton" type="CheckButton" parent="Menu"]
margin_right = 76.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "PointCloud Map"

[node name="NightModeCheckButton" type="CheckButton" parent="Menu"]
margin_top = 40.0
focus_mode = 0
pressed = true
action_mode = 0
enabled_focus_mode = 0
text = "Night Mode"

[node name="OnlyKnownObjectCheckButton" type="CheckButton" parent="Menu"]
margin_top = 80.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Only Known Objects"

[node name="RenderingQuality" type="HBoxContainer" parent="Menu"]
margin_left = 6.0
margin_top = 130.0
margin_right = 300.0

[node name="Label" type="Label" parent="Menu/RenderingQuality"]
margin_top = 1.0
margin_right = 185.0
margin_bottom = 15.0
text = "Rendering Quality (Low-High)"

[node name="MSAASlider" type="HSlider" parent="Menu/RenderingQuality"]
margin_left = 189.0
margin_right = 294.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_left = 1.0
margin_top = 158.0
margin_right = 236.0
margin_bottom = 198.0

[node name="ModeSwitch" type="CheckButton" parent="Menu/HBoxContainer"]
margin_right = 254.0
margin_bottom = 40.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "Mode Switch (Auto/Manual)"

[node name="BGMButton" type="CheckButton" parent="Menu"]
margin_top = 200.0
margin_right = 111.0
margin_bottom = 240.0
focus_mode = 0
pressed = true
enabled_focus_mode = 0
text = "BGM"

[node name="VehicleStatus" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
alignment = 1

[node name="Steering" type="Sprite" parent="VehicleStatus"]
position = Vector2( 1, -86 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 24 )
script = ExtResource( 15 )

[node name="VehicleRepot" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_right = 6.0

[node name="CheckButton" type="CheckButton" parent="VehicleRepot"]
visible = false
margin_left = 248.0
margin_top = -56.0
margin_right = 364.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 54 )
text = "MODE"
align = 1
icon_align = 1
expand_icon = true

[node name="Manual" type="Sprite" parent="VehicleRepot/CheckButton"]
visible = false
position = Vector2( 60.1802, -27.1807 )
scale = Vector2( 0.118198, 0.118198 )
texture = ExtResource( 35 )

[node name="Auto0" type="Sprite" parent="VehicleRepot/CheckButton"]
visible = false
position = Vector2( 60.1802, -27.1807 )
scale = Vector2( 0.111802, 0.111802 )
texture = ExtResource( 36 )

[node name="Robobus-39" type="Sprite" parent="VehicleRepot"]
position = Vector2( 307.063, -46.5002 )
scale = Vector2( 0.159492, 0.159492 )
texture = ExtResource( 17 )
script = ExtResource( 39 )

[node name="ModeLabel" type="Label" parent="VehicleRepot/Robobus-39"]
margin_left = -170.159
margin_top = -116.0
margin_right = 180.841
margin_bottom = 11.0
custom_fonts/font = SubResource( 55 )
text = "MODE"
align = 1
valign = 1
autowrap = true

[node name="Brake" type="Sprite" parent="VehicleRepot"]
position = Vector2( 13, -52.9998 )
scale = Vector2( 0.0859394, 0.085939 )
texture = ExtResource( 42 )
script = ExtResource( 10 )

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Brake"]
margin_left = 224.0
margin_top = -79.0
margin_right = 1338.0
margin_bottom = 117.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 49 )
step = 1.0

[node name="Speedometer" type="Sprite" parent="VehicleRepot"]
position = Vector2( 13.161, -76.8394 )
scale = Vector2( 0.0423415, 0.0423414 )
texture = ExtResource( 43 )
script = ExtResource( 45 )

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Speedometer"]
margin_left = 452.0
margin_top = -122.0
margin_right = 2712.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 53 )
step = 1.0

[node name="Gear" type="Sprite" parent="VehicleRepot"]
position = Vector2( 14.1439, -99.8557 )
scale = Vector2( 0.046313, 0.0463112 )
texture = ExtResource( 41 )
script = ExtResource( 46 )

[node name="GearLabel" type="Label" parent="VehicleRepot/Gear"]
margin_left = 375.408
margin_top = -308.0
margin_right = 2480.41
margin_bottom = 321.0
custom_fonts/font = SubResource( 43 )
text = "Gear"
align = 1
valign = 1
uppercase = true

[node name="Battery" type="Sprite" parent="VehicleRepot"]
position = Vector2( 13.25, -28.75 )
scale = Vector2( 0.0419922, 0.041992 )
texture = ExtResource( 44 )
script = ExtResource( 47 )

[node name="ProgressBar" type="ProgressBar" parent="VehicleRepot/Battery"]
margin_left = 454.0
margin_top = -265.0
margin_right = 2733.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 50 )
step = 1.0

[node name="ConsoleMeter" type="Sprite" parent="VehicleRepot"]
position = Vector2( 197, -74 )
scale = Vector2( 0.328125, 0.328125 )
texture = ExtResource( 25 )
script = ExtResource( 26 )

[node name="VelocityLabel" type="Label" parent="VehicleRepot/ConsoleMeter"]
margin_left = -212.0
margin_top = 56.0
margin_right = 216.0
margin_bottom = 184.0
custom_colors/font_color = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_fonts/font = SubResource( 33 )
text = "0Km/h"
align = 1
valign = 1

[node name="Hand" type="Sprite" parent="VehicleRepot/ConsoleMeter"]
position = Vector2( 0, 50 )
texture = ExtResource( 16 )

[node name="Rectangle-horizontal" type="Sprite" parent="VehicleRepot"]
modulate = Color( 0.709804, 0.705882, 0.705882, 1 )
self_modulate = Color( 0.929412, 0.929412, 0.929412, 1 )
show_behind_parent = true
light_mask = 524288
position = Vector2( 173, -56 )
scale = Vector2( 0.703125, 0.296875 )
texture = ExtResource( 40 )

[node name="TrafficLightControl" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -51.0
margin_bottom = -51.0

[node name="TrafficLight" type="Sprite" parent="TrafficLightControl"]
position = Vector2( -57, -46 )
scale = Vector2( 0.4875, 0.4875 )
texture = ExtResource( 11 )
script = ExtResource( 28 )

[node name="Green" type="Sprite" parent="TrafficLightControl/TrafficLight"]
position = Vector2( -54.1177, -0.000244141 )
scale = Vector2( 0.227941, 0.227941 )
texture = ExtResource( 20 )
script = ExtResource( 34 )

[node name="Red" type="Sprite" parent="TrafficLightControl/TrafficLight"]
position = Vector2( 54.1177, -0.000244141 )
scale = Vector2( 0.226471, 0.226471 )
texture = ExtResource( 19 )
script = ExtResource( 23 )

[node name="Yellow" type="Sprite" parent="TrafficLightControl/TrafficLight"]
position = Vector2( 0, -0.000244141 )
scale = Vector2( 0.227206, 0.227206 )
texture = ExtResource( 21 )
script = ExtResource( 33 )

[node name="TextureRectL" type="TextureRect" parent="TrafficLightControl/TrafficLight"]
margin_left = -102.564
margin_top = 86.1538
margin_right = -38.5641
margin_bottom = 150.154
texture = ExtResource( 29 )
script = ExtResource( 38 )

[node name="TextureRectR" type="TextureRect" parent="TrafficLightControl/TrafficLight"]
margin_left = 36.9231
margin_top = 88.2052
margin_right = 100.923
margin_bottom = 152.205
texture = ExtResource( 32 )
script = ExtResource( 37 )

[connection signal="toggled" from="Menu/PointCloudMapMeshCheckButton" to="PointCloudMapMesh" method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/NightModeCheckButton" to="EgoVehicle/Camera" method="_on_NightModeCheckButton_toggled"]
[connection signal="toggled" from="Menu/OnlyKnownObjectCheckButton" to="DynamicObjectMesh" method="_on_OnlyKnownObjectCheckButton_toggled"]
[connection signal="value_changed" from="Menu/RenderingQuality/MSAASlider" to="." method="_on_MSAASlider_value_changed"]
